pypi-cache/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pypi-cache
  labels:
    name: pypi-cache
